<resources>
    <string name="app_name">Bug Hunter</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_email">Your email</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="_24_days_ago">24 Days Ago</string>
    <string name="how_to_get_bitmap_from_mediastore_images_media_getbitmap_contentresolver_uri">How to get Bitmap from MediaStore.Images.Media.getBitmap(contentResolver, uri)?</string>
    <string name="question_descriptions">I am having difficulties with retrieving a bitmap from my uri. I am trying to fetch the image taken from camera after opening the camera via an Intent. … Because I use MediaStore.EXTRA_OUTPUT I do not receive anything in my data object it is null. I try to use MediaStore.Images.Media.getBitmap() to retrieve the bitmap. I pass in the imageUri.</string>
    <string name="_1_909">1,909</string>
    <string name="answers">Answers</string>
    <string name="_326">326</string>
    <string name="views">Views</string>
    <string name="_20">20</string>
    <string name="hunter_coins">Hunter Coins</string>
    <string name="answer">Answer</string>
    <string name="answer_dummy">In your code you are trying to get the status of service from Activity. The correct way is that status should be given by the service.  There are several possibilities for an activity to communicate with a service and vice versa. As you are using Broadcast receiver so you can broadcast a message in onHandleIntent() method when the service started.</string>
    <string name="user_creation_success">User Created Successfully</string>
    <string name="empty_passord_field_error">Password field Can\'t be empty</string>
    <string name="empty_email_field_error">Email field Can\'t be empty</string>
    <string name="skip_login">Skip Login</string>
    <string name="search_error">Search</string>
    <string name="search_with_photo">Search With Photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="ask_question">Ask Question</string>
    <string name="question_title">Question Title</string>
    <string name="offer_hunter_coins">Offer Hunter Coins</string>
    <string name="ask">ask</string>
    <string name="rewarded">Rewarded</string>
    <string name="_0">0</string>
    <string name="bug">bug</string>
    <string name="helpful_hunts">Helpful Hunts</string>
    <string name="no_answers_yet">No Answers yet</string>
    <string name="question_submission_message">\"Adding more hunter coins can encourage hunter to hunt your Bug. Want to add some hunter coins?\"</string>
    <string name="send_coins_message">"Are you sure want to reward this hunt for %1$s Hunter coins?"</string>
    <string name="not_enough_coins">Not Enough Coins notify admin for more coins</string>
    <string name="add_your_answer_here">Add your answer here</string>
    <string name="bug_hunter">Bug Hunter</string>
    <string name="jhon_smith">Jhon Smith</string>
    <string name="log_out">Logout</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="no_question_yet">No Question Yet</string>
    <string name="search_or_take_photo_of_your_error">Search or take photo of your error</string>
</resources>