<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ui.fragments.AnswersListFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <io.github.florent37.shapeofview.shapes.RoundRectView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shape_roundRect_bottomLeftRadius="@dimen/_10sdp"
                app:shape_roundRect_bottomRightRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image"
                            android:layout_width="60dp"
                            android:layout_height="60dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name" />

                            <TextView
                                android:id="@+id/tv_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_24_days_ago" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_question"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/how_to_get_bitmap_from_mediastore_images_media_getbitmap_contentresolver_uri"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <com.borjabravo.readmoretextview.ReadMoreTextView
                            android:id="@+id/tv_description"
                            android:layout_width="match_parent"
                            android:linksClickable="true"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:ellipsize="end"
                            android:text="@string/question_descriptions" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="start">

                            <TextView
                                android:id="@+id/tv_answer_count"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/_1_909"
                                android:textSize="@dimen/_16sdp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/_2sdp"
                                android:gravity="center"
                                android:text="@string/answers"
                                android:textSize="@dimen/_10sdp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/tv_views_count"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/_326"
                                android:textSize="@dimen/_16sdp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="bottom"
                                android:layout_marginStart="@dimen/_2sdp"
                                android:gravity="center"
                                android:text="@string/views"
                                android:textSize="@dimen/_10sdp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_hunter_coins_number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:visibility="gone"
                            android:gravity="end">

                            <TextView
                                android:id="@+id/tv_hunter_points"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/_20"
                                android:textSize="@dimen/_16sdp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/_2sdp"
                                android:gravity="center"
                                android:text="@string/hunter_coins"
                                android:textSize="@dimen/_10sdp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </io.github.florent37.shapeofview.shapes.RoundRectView>

            <TextView
                android:id="@+id/tv_no_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_answers_yet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_answers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab_answer"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:contentDescription="@string/ask"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="RelativeOverlap" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>