<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp" />


                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:gravity="center_vertical"
                        android:text="@string/name" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/_24_days_ago" />

                </LinearLayout>

                <com.borjabravo.readmoretextview.ReadMoreTextView
                    android:id="@+id/answer_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:linksClickable="true"
                    android:text="@string/answer_dummy"
                    app:trimLength="5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:baselineAligned="false"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_rewarded"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:visibility="gone"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/iv_rewarded"
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:contentDescription="@string/rewarded"
                            android:src="@drawable/ic_baseline_stars_24" />

                        <TextView
                            android:id="@+id/tv_rewarded_title"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/rewarded"
                            android:textColor="@color/ForestGreen"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_helpful_hunts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:visibility="gone"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:id="@+id/tv_helpful_hunts"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/helpful_hunts" />

                        <ImageView
                            android:id="@+id/iv_bug"
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:contentDescription="@string/bug"
                            android:src="@drawable/ic_baseline_bug_report_24" />

                        <TextView
                            android:id="@+id/tv_helpful_hunts_count"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_0" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>